--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "Minesweeper recreated in React",
   "main": "./src/app.js",
   "scripts": {
-    "build": "webpack -p"
+    "start": "NODE_ENV=development webpack-dev-server",
+    "build": "webpack"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
-  "keywords": ["Minesweeper", "React"],
+  "keywords": [
+    "Minesweeper",
+    "React"
+  ],
   "author": "browles",
   "license": "ISC",
   "dependencies": {
+    "babel-runtime": "^6.1.18",
+    "immutable": "^3.7.5",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
@@ -21,8 +30,16 @@
   "devDependencies": {
     "babel-core": "^6.1.19",
     "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.4"
+    "css-loader": "^0.22.0",
+    "file-loader": "^0.8.4",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.4",
+    "webpack-dev-server": "^1.12.1"
   }
 }
